--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="yandex-verification" content="b30299916c0bc95c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Главная страница БПОУ ВО ЧЛМТ. Узнайте о правилах приема, специальностях и документах для поступления.">
     <title>Главная страница | БПОУ ВО ЧЛМТ</title>
